--- a/services/devops/Dockerfile
+++ b/services/devops/Dockerfile
@@ -4,9 +4,6 @@ FROM golang:1.15.6
 RUN set -eu \
     && apt-get -y update \
     && DEBIAN_FRONTEND=noninteractive apt-get -y install --no-install-recommends \
-        libczmq-dev \
-        libsodium-dev \
-        libzmq3-dev \
         vim \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
@@ -19,7 +16,7 @@ RUN set -eu \
 # go packages
 RUN set -eu \
     && go get -u \
-        github.com/zeromq/goczmq
+        github.com/go-zeromq/zmq4
 
 # static files
 COPY root /
